manifests/watchtower/homer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: home
  labels:
    app.kubernetes.io/name: homer
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homer
  ports:
    - name: http
      port: 8080
      targetPort: http
